# invoice-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PITCH.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: .env.example  .gitignore  Dockerfile.dev  alembic.ini  pyproject.toml
backend/data/: corpus_extracted.json  corpus_unique.json  extracted_samples.json  real_samples.json
backend/data/uploads/: inv-22897889.txt  inv-254c0c21.txt  inv-58565b0f.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_productionize_schema.py  0003_multitenancy.py  0004_llm_calls.py  0005_org_auto_approve_policy.py  0006_user_thread.py  0007_cleanup_local_files.py
backend/scripts/: build_corpus.py  demo.py  extract_samples.py  make_sample_pdfs.py  test_s3.py  upload_sample_invoices.py
backend/src/app/: main.py  seed.py
backend/src/app/agents/: conversation_agent.py  extraction_agent.py
backend/src/app/api/: deps.py
backend/src/app/clients/: s3.py
backend/src/app/core/: config.py  limiter.py  paths.py  security.py
backend/src/app/db/: session.py
backend/src/app/domain/: llm_pricing.py  money.py
backend/src/app/repositories/: audit_repo.py  comment_repo.py  correction_repo.py  invoice_repo.py  llm_call_repo.py  org_repo.py  po_repo.py  rule_repo.py  user_repo.py  vendor_repo.py
backend/src/app/schemas/: audit.py  auth.py  chat.py  comment.py  common.py  rule.py  (+1 more)
backend/tests/: conftest.py
backend/tests/integration/: test_migrations.py  test_pipeline.py
backend/tests/unit/: test_seed.py
(+220 files in other folders)
