[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-copilot"
version = "0.1.0"
description = "A conversational AI accounts-payable agent"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "anthropic>=0.39",
    "openai>=1.40",
    "pypdf>=4",
    "psycopg[binary]>=3.1",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27", "fpdf2>=2.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
